--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.2",
     "firebase": "^8.0.2",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "redux-auth-wrapper": "^3.0.0",
     "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
